--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Hire Mike</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,11 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Hire Mike</a></h1>
-					<p>A Career-Centered Newsletter<br />
-					for a dude in Upstate NY, USA.</p>
+					<div class="header__text">
+						<h1 id="logo"><a href="#">Hire Mike</a></h1>
+						<p>A Career-Centered Newsletter<br />
+						for a dude in Upstate NY, USA.</p>
+					</div>
 				</header>
 				<footer>
 					<ul class="icons">
@@ -38,16 +40,32 @@
 
 						<!-- One -->
 							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
-								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Favorite Blog Articles</h2>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<article>
+										<header>
+											<h2>How I Began Web Dev</h2>
+										</header>
+									<p>The room was dark in the cold morning before everyone was up. Dad was in the cozy cloth swivel chair, while I stood beside him asking question after question about the code I saw in front of me. Dad explained how the code we saw on the screen was not the same code which the computer would execute - to do this, he explained binary language and machine language. I was six years old. <a href="https://michaelborn.me/entry/how-i-began-web-dev">Keep reading about my start in web dev</a>
+</p>
+</article>
+<article>
+	<header>
+		<h2>How To Load Composer Packages From A VCS Repo</h2>
+		<p><em>Aug. 26, 2018</em></p>
+	</header>
+	<p>Another TIL short tip, this time on composer syntax for loading a custom package (or a non-registered package, or whatever the case may be) from version control. <a href="https://michaelborn.me/entry/how-to-load-composer-packages-from-a-vcs-repo">Read "How To Load Composer Packages From A VCS Repo"</a></p>
+</article>
+<article>
+	<header>
+		<h2>Installing a Wildcard SSL with Certbot</h2>
+		<p><em>May 17, 2018</em></p>
+	</header>
+	<p>Using LetsEncrypt to install a wildcard SSL certificate on my personal blog.</p>
+	<p><a href="https://michaelborn.me/entry/installing-a-wildcard-ssl-with-certbot"></a></p>
+</article>
 								</div>
 							</section>
 
@@ -98,30 +116,7 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
-
 						<!-- Five -->
-						<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -449,7 +444,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								</div>
 							</section>
-						-->
 
 					</div>
 
@@ -457,7 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Michael Born. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
@@ -466,12 +460,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
