Add more and better text / articles.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<div class="header__text">
 						<h1 id="logo"><a href="#">Hire Mike</a></h1>
-						<p>A Career-Centered Newsletter<br />
-						for a dude in Upstate NY, USA.</p>
+						<p><span>Why This Web Dev<br />
+						Should Work At MailerLite.</p>
 					</div>
 				</header>
-				<footer>
-					<ul class="icons">
-						<li><a href="http://twitter.com/mborn319" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/mborn319" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:info@michaelborn.me" class="icon fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
 			</section>
 
 		<!-- Wrapper -->
@@ -42,45 +35,49 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Favorite Blog Articles</h2>
+										<h2>Blog Highlights</h2>
+										<p>These are a few of my favorite articles from my <a href="https://michaelborn.me/">"Web dev and such"</a> blog.</p>
 									</header>
 									<article>
 										<header>
 											<h2>How I Began Web Dev</h2>
+											<p><em>Feb. 3, 2018</em></p>
 										</header>
 									<p>The room was dark in the cold morning before everyone was up. Dad was in the cozy cloth swivel chair, while I stood beside him asking question after question about the code I saw in front of me. Dad explained how the code we saw on the screen was not the same code which the computer would execute - to do this, he explained binary language and machine language. I was six years old. <a href="https://michaelborn.me/entry/how-i-began-web-dev">Keep reading about my start in web dev</a>
-</p>
-</article>
-<article>
-	<header>
-		<h2>How To Load Composer Packages From A VCS Repo</h2>
-		<p><em>Aug. 26, 2018</em></p>
-	</header>
-	<p>Another TIL short tip, this time on composer syntax for loading a custom package (or a non-registered package, or whatever the case may be) from version control. <a href="https://michaelborn.me/entry/how-to-load-composer-packages-from-a-vcs-repo">Read "How To Load Composer Packages From A VCS Repo"</a></p>
-</article>
-<article>
-	<header>
-		<h2>Installing a Wildcard SSL with Certbot</h2>
-		<p><em>May 17, 2018</em></p>
-	</header>
-	<p>Using LetsEncrypt to install a wildcard SSL certificate on my personal blog.</p>
-	<p><a href="https://michaelborn.me/entry/installing-a-wildcard-ssl-with-certbot"></a></p>
-</article>
+								</p>
+								</article>
+								<article>
+									<header>
+										<h2>How To Load Composer Packages From A VCS Repo</h2>
+										<p><em>Aug. 26, 2018</em></p>
+									</header>
+									<p>Another TIL short tip, this time on composer syntax for loading a custom package (or a non-registered package, or whatever the case may be) from version control. <a href="https://michaelborn.me/entry/how-to-load-composer-packages-from-a-vcs-repo">Read "How To Load Composer Packages From A VCS Repo"</a></p>
+								</article>
+								<article>
+									<header>
+										<h2>Installing a Wildcard SSL with Certbot</h2>
+										<p><em>May 17, 2018</em></p>
+									</header>
+									<p>Using LetsEncrypt to install a wildcard SSL certificate on my personal blog.</p>
+									<p><a href="https://michaelborn.me/entry/installing-a-wildcard-ssl-with-certbot"></a></p>
+								</article>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>What I'm Good At</h3>
+									<p>After seven years of web development, you get <a href="https://michaelborn.me/about">good at stuff</a>. Here are a few things I think I'm good at.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Semantic markup</li>
+										<li class="fa-wheelchair">Accessibility</li>
+										<li class="fa-book">Project proposals</li>
+										<li class="fa-coffee">Tea-drinking</li>
+										<li class="fa-bolt">MySQL optimization</li>
+										<li class="fa-shield">Security</li>
+										<li class="fa-linux">Linux, especially bash</li>
+										<li class="fa-git">The git cli</li>
 									</ul>
 								</div>
 							</section>
@@ -88,28 +85,31 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Cool Things I've Built</h3>
+									<p>Some of my cooler projects are listed here.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="The mohawk valley history website shows a bike route on a map of new york with markers for nearby historical attractions." /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Mohawk Valley Path Through History</h4>
+												<p>I utilized <a href="https://auth0.com/">Auth0</a>, <a href="https://leafletjs.com/">Leaflet.js</a> and bike routes from <a href="https://ridewithgps.com/">RideWithGPS.com</a> to build an award-winning website promoting bicycle tourism in Upstate NY.</p>
+												<p><a href="https://www.mohawkvalleyhistory.com/bike-thru-history" class="button primary small">mohawkvalleyhistory.com</a></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://www.centralnewyork.com" class="image"><img src="images/pic02.jpg" alt="A search box with map and results in the sidebar" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Banker Faith Properties</h4>
+												<p>I built a mapping system, a Java-based RETS data import, an asset manager and a closure-based event library to help drive innovation for this large realty website. One of the latest challenges involved integrating with Twilio to text real estate agents when any form is filled out on the website.</p>
+												<p><a href="https://www.centralnewyork.com" class="button primary small">centralnewyork.com</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>BoomBox</h4>
+												<p>I used a Python CD ripper, MongoDB and Node.js to put together an audio server with a web app for remote control.</p>
+												<p><a href="https://michaelborn.me/entry/my-largest-solo-project">My Largest Solo Project</a></p>
 											</div>
 										</article>
 									</div>
@@ -449,6 +449,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<section id="footer">
+						<ul class="icons">
+							<li><a href="http://twitter.com/mborn319" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/mborn319" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:info@michaelborn.me" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 						<div class="container">
 							<ul class="copyright">
 								<li>&copy; Michael Born. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
